[package]
name = "p2p-node-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
bytes = "1.4.0"
rand = "0.8.5"
chrono = "0.4.23"

bitcoin = { version = "0.29.2", default-features = false, features = ["serde", "std"] }
