[package]
name = "p2p-node-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]

# Core
tokio = { version = "1.25.0", features = ["full"] }
bitcoin = { version = "0.29.2", default-features = false, features = ["serde", "std"] }
rand = "0.8.5"
chrono = "0.4.23"

# Error handling
log = "0.4.17"
env_logger = "0.10.0"
error-stack = "0.3.1"
